Add more retraining stuff

--- a/manuel/pytorch-tutorials/sixtyminutes_04_classifier.ipynb
+++ b/manuel/pytorch-tutorials/sixtyminutes_04_classifier.ipynb
@@ -274,9 +274,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,  2000] loss: 4.397\n",
+      "[1,  4000] loss: 3.686\n",
+      "[1,  6000] loss: 3.351\n",
+      "[1,  8000] loss: 3.160\n",
+      "[1, 10000] loss: 3.063\n",
+      "[1, 12000] loss: 2.955\n",
+      "[2,  2000] loss: 2.849\n",
+      "[2,  4000] loss: 2.733\n",
+      "[2,  6000] loss: 2.692\n",
+      "[2,  8000] loss: 2.653\n",
+      "[2, 10000] loss: 2.587\n",
+      "[2, 12000] loss: 2.534\n",
+      "Finished training\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(2):\n",
     "    running_loss = 0.0\n",
@@ -289,8 +309,23 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        running_loss += loss.data[0]\n"
+    "        running_loss += loss.data[0]\n",
+    "        # print statistics\n",
+    "        running_loss += loss.data[0]\n",
+    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
+    "            print('[%d, %5d] loss: %.3f' %\n",
+    "                  (epoch + 1, i + 1, running_loss / 2000))\n",
+    "            running_loss = 0.0\n",
+    "            \n",
+    "print('Finished training')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
